--- a/text/maintenance.qmd
+++ b/text/maintenance.qmd
@@ -10,11 +10,13 @@ filters:
 lightbox: auto
 ---
 
-## Sonde Failure in Field
+## Sonde and Sensor Failures in Field
 
-Two sonde failures and multiple sensor failures (3 Wiped CT) occurred during the first quarter. The data sondes will need to be sent in for repair and sensors will most likely need to be replaced since they are no longer covered under warranty.
+Two sonde failures and multiple sensor failures (3 Wiped CT) occurred during the first quarter. The data sondes were sent in for repairs or taken out of rotation and the sensors were replaced since they are no longer covered under warranty.
 
-SD card failed prior to deployment of sonde at San Sebastian (Flounder SN: 13K102679) on March 7, 2024. Since failure occurred prior to deployment, data were not collected during the entire deployment (March 7, 2024 10:00 -- April 9, 2024 11:30) and post deployment procedures were not conducted. The data sonde was taken out of rotation and sent to Xylem/YSI for repairs. 
+In March there was an SD card failure prior to deploying the sonde at San Sebastian (Flounder SN: 13K102679). Since failure occurred prior to deployment, data were not collected during the entire deployment (March 7, 2024 10:00 -- April 9, 2024 11:30) and post deployment procedures were not conducted. The data sonde was taken out of rotation and sent to Xylem/YSI for repairs. 
+
+There were two sonde failures and one CT sensor failure in the third quarter. The sonde failures occurred at Pellicer Creek. The first was on July 20th and was possibly caused by a lightening strike. The sonde (EXO2: Heron) lost communication and post deployment procedures were conducted on another data sonde. On July 30th, Triton data sonde experienced an SD card failure after only 24 hours of deployment. Both sonde failures resulted in missing data. The Fort Matanzas data sonde Marlin had a CT failure in July due to a buildup of salt on the electrodes. The sensor was taken out of rotation.
 
 ## Wiper Brush Fell Off
 
@@ -28,6 +30,7 @@ San Sebastian:
 
 -   December 12 -- January 10, 2024 (Megalops SN: 16J102351) central wiper SN: 22A106852
 -   February 8 -- March 7, 2024 (Megalops SN: 16J102351) central wiper SN: 22A106852
+-   September 19 -- October 1, 2024 SS (Megalops SN:16J102351) central wiper SN: 22A106852
 
 Fort Matanzas:
 
@@ -62,8 +65,12 @@ In April, both SS and FM datasondes were freezing the KOR software each time a c
 
 ## Chlorophyll sensors
 
-Several chlorophyll sensors in Q2 deployed at all four stations calibrated with a yellow QC score. The yellow QC score means that the sensor gain or offset is near the threshold of calibration limits. The sensor may experience sensor drift. After performing a factory reset calibration and making new standard it was determined that the sensors need replacing. 
+Several chlorophyll sensors in Q2 and Q3 deployed at all four stations calibrated with a yellow QC score. The yellow QC score means that the sensor gain or offset is near the threshold of calibration limits. The sensor may experience sensor drift. After performing a factory reset calibration and making new standard it was determined that the sensors need replacing. 
 
 ## Leveling
 
 The GTM research staff completed the annual task of measuring the elevation of the datasonde in Pellicer Creek on April 15 - 16, 2024. The team measured the change in height from a reference benchmark and three positions on the piling holding the sonde. The orthometric height of the sonde tube pin position is used as the station offset when calibrating the depth sensor for the datasonde. The orthometric heights of the positions can also be used to determine if the piling holding the sonde is moving vertically.   
+
+## Weather Station
+
+On September 10th the temp/rh sensor tip was changed because of heaving rust on the screen. The entire sensor will be replaced in Q4.
