--- a/text/environmental-drivers.qmd
+++ b/text/environmental-drivers.qmd
@@ -31,7 +31,11 @@ This section includes drivers of environmental patterns such as significant weat
 
 ## Tropical Cyclones
 
-There were no tropical cyclones that had direct impacts in the GTM estuary during this reporting period.
+There were two tropical cyclones that had direct impacts in the GTM estuary during this reporting period: Hurricane Debby and Hurricane Helene.
+
+Northeast Florida felt the impacts of Hurricane Debby August 4-6 as Debby approached Steinhatchee, Florida as a Category 1 hurricane and moved across the state bringing heavy rain and strong winds.
+
+The area was impacted by another tropical cyclone, Hurricane Helene in late September. Hurricane Helene made landfall in the Big Bend area of Florida as a Category 4 storm. Very strong winds and rain caused significant storm surge and flooding in Northeast Florida. The impacts of Hurricane Helene can be seen in our SWMP data from September 25--26, however, we did unfortunately experience intermittent battery and sensor malfunctions during the storm, leaving our data incomplete.
 
 ## Nor'easters
 
@@ -44,6 +48,21 @@ Using duration of wind directions between 0-100 degrees for greater than 24-hrs,
 Strong winds were recorded at the GTMNERR weather station on February 6th when an extreme storm event passed through the area. This storm brought a lot of rain, hail and high winds to Northeast Florida. The National Weather Service confirmed that two tornadoes touched down in Jacksonville as a result of the extreme storm system. Surprisingly, the Pellicer Creek weather station did not record any rain from the event but it did record the greatest wind speeds for the first half of 2024. The strong winds were predominately from the north and the maximum wind speed was 32.7 mph (@fig-winds-monthly). Strong winds initially raised salinity at all stations (@fig-range-sal), and the effect was especially pronounced at Pellicer Creek (@fig-range-sal-4). 
 
 <!-- ![Weather Service Image from Flagler Live showing the wind speed predictions for the April Nor\'easter](/images/weather-service-easter.jpg)  -->
+
+```{r}
+#| label: tbl-hurricanes
+#| echo: false
+#| tbl-cap: "Extreme storms that affected the GTMNERR from September 2002-September 2024. Asterisks (*) represent storms listed in NOAA’s Historic Hurricane Tracker as coming within 60 kilometers of the GTMNERR. Cardinal directions for wind were converted using a 16-point meteorological compass found at https://planetcalc.com/3590/. H = Hurricane, TS = Tropical Storm."
+
+storms <- readxl::read_xlsx(here::here('data', 
+                                      'storms_table_for_Quarterly_Report.xlsx'),
+                            sheet = "Sheet1") 
+
+  kbl(storms, align = "c") %>%
+  kable_styling(fixed_thead = T, font_size = 12) #%>% 
+  #column_spec(8, border_left = F)
+
+```
 
 ```{r}
 #| label: tbl-neer
