--- a/text/environmental.qmd
+++ b/text/environmental.qmd
@@ -32,7 +32,7 @@ The following includes variables that establish the estuarine setting: rainfall,
 Rainfall totals for the third quarter of 2024 exceeded the totals for the first and second quarters combined (@fig-rainfall). September had the greatest monthly total rainfall for 2024 (@fig-rainfall-2). September also had the greatest number of rain days exceeding 10 mm/day (@fig-rainfall-3) and more storms producing heavy rainfall (@fig-rainfall-4). 
 <!-- Winter storm Finn (unofficially named) brought rainfall and strong winds in [January](https://www.actionnewsjax.com/news/local/strong-storm-cold-front-will-move-across-northeast-florida-southeast-georgia/DNJ3SOGJ35G4FCKJLPJNP67YZY/) to Northeast Florida causing some local schools to release students early and cancel after school activities (@fig-rainfall-1; @fig-rainfall-2). This event is discussed in further detail in the next chapter. -->
 
-September 2004 had the second highest monthly rainfall total recorded at the Pellicer Creek weather station (@tbl-topRain) and had the greated amount of rainfall when compared to annual September data (@fig-SeptPrecip; @fig-SeptPrecip-1; @fig-SeptPrecip-2). Total rainfall so far in 2024 is 1090.9 mm (@fig-SeptPrecip-3).
+September 2004 had the second highest monthly rainfall total recorded at the Pellicer Creek weather station (@tbl-topRain) and had the greatest amount of rainfall when compared to annual September data (@fig-SeptPrecip; @fig-SeptPrecip-1; @fig-SeptPrecip-2). Total rainfall so far in 2024 is 1090.9 mm (@fig-SeptPrecip-3).
 
 Light intensity remained high in July and August but decreased drastically in September (@fig-lightintensity). 
 
@@ -40,7 +40,7 @@ Daily average air temperatures were variable during the first part of the year b
 
 While there were some low water temperatures in January, daily water temperature averages were generally higher than average throughout the spring and early summer (@fig-range-temp). Water temperature decreased in August and September with the onset of the large rain events and as a result water temperatures were below the historic average daily range at all four stations (@fig-range-temp-2; @fig-range-temp-3).
 
-Rainfall in January brought salinities lower than their average daily ranges (@fig-range-sal), particularly at the stations farthest from the inlets (@fig-range-sal-1; @fig-range-sal-4). However, the drought conditions in spring made salinity levels rise. Salinities stayed above the average daily range at all stations through July but was most pronounced at Pine Island (@fig-range-sal-1). Salinity levels decreased to below the historic average daily range at all four stations in late August through September (@fig-range-sal-1; @fig-range-sal-2; @fig-range-sal-3; @fig-range-sal-4).
+Rainfall in January brought salinity levels lower than their average daily ranges (@fig-range-sal), particularly at the stations farthest from the inlets (@fig-range-sal-1; @fig-range-sal-4). However, the drought conditions in spring made salinity levels rise. Salinity stayed above the average daily range at all stations through July but was most pronounced at Pine Island (@fig-range-sal-1). Salinity levels decreased to below the historic average daily range at all four stations in late August through September (@fig-range-sal-1; @fig-range-sal-2; @fig-range-sal-3; @fig-range-sal-4).
 
 ## Data
 
@@ -200,7 +200,7 @@ TopValues <- Monthly_PRCP %>%
 
 TopValues %>%
   select(Month,Year,totprcp) %>% 
-  rename(`Total Precipitation` = 'totprcp') %>% 
+  rename(`Total Precipitation (mm)` = 'totprcp') %>% 
   kbl(align = "c") %>%
   kable_styling(fixed_thead = T) %>% 
   column_spec(3, border_left = T)
@@ -214,7 +214,7 @@ TopValues %>%
 #| fig.subcap:
 #|    - "Total precipitation for September 2002-2024."
 #|    - "Monthly total precipitation 2002-2024."
-#|    - "Annual precipitation totals Jan 2002-Sept 2004."
+#|    - "Annual precipitation totals Jan 2002-Sept 2024."
 #|    - "Annual precipitation totals Jan 2002-Sept 2024."
 #| layout-ncol: 2
 ## September Precip ----
@@ -320,7 +320,7 @@ The plot below is interactive. Clicking on elements in the legend (months) will 
 ```{r}
 #| label: fig-lightintensity
 #| echo: false
-#| fig.cap: "Total light intensity by time of day for each month based on photosynthetically active radiation data collected at the Pellicer Creek weather station."
+#| fig.cap: "Total light intensity by time of day for each month based on photosynthetically active radiation (PAR) data collected at the Pellicer Creek weather station."
 
 ggplotly(
 MET %>% 
@@ -344,7 +344,7 @@ MET %>%
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5),
         axis.text = element_text(color = "black")) +
   labs(x = "Time of Day (HH:MM)",
-       y = "Intensity of Photosynthetically Active Radiation (mMol/m-2)")
+       y = "Intensity of PAR (mMol/m-2)")
 )
 ```
 
