--- a/text/nut-indicators.qmd
+++ b/text/nut-indicators.qmd
@@ -35,17 +35,17 @@ By visiting [Florida Rules](https://www.flrules.org/gateway/ruleno.asp?id=62-302
 
 ## Summary
 
-Daily average dissolved oxygen values were mostly within or above their average ranges so far in 2024 (@fig-do); however, Pine Island and Pellicer Creek (@fig-do; @fig-do-4) had above average and below daily average range. In previous years, dissolved oxygen values at Pine Island (@fig-do-pi-1) and Pellicer Creek (@fig-do-pc-1) frequently fell below the 2 mg/L hypoxia threshold, but so far in 2024, there have not been any dissolved oxygen readings below that threshold (@fig-do-pi-2, (@fig-do-pc-2). 
+Daily average dissolved oxygen values were mostly within or above their average ranges so far in 2024 (@fig-do); however, Pine Island and Pellicer Creek (@fig-do; @fig-do-4) both had above average and below daily average ranges. In previous years, dissolved oxygen values at Pine Island (@fig-do-pi-1) and Pellicer Creek (@fig-do-pc-1) frequently fell below the 2 mg/L hypoxia threshold, but so far in 2024, there have not been any dissolved oxygen readings below that threshold (@fig-do-pi-2; @fig-do-pc-2). 
 
-Chlorophyll *a* values were often higher than average at all stations this year, especially at Pine Island, San Sebastian, and Pellicer Creek (@fig-chla-boxplots). Annual geometric mean (AGM) chlorophyll *a* values were high and above the state threshold levels at all stations, except for Fort Matanzas (@fig-chla-boxplots). Annual geometric mean (AGM) chlorophyll *a* values were high and above the state threshold levels at all stations, except for Fort Matanzas  (@fig-chla-agm), (@fig-chla-agm-3). The AGM will likely change for all stations as more data are added throughout the year.
+Chlorophyll *a* values were often higher than average at all stations this year, especially at Pine Island, San Sebastian, and Pellicer Creek (@fig-chla-boxplots). Annual geometric mean (AGM) chlorophyll *a* values were high and above the state threshold levels at all stations, except for Fort Matanzas (@fig-chla-boxplots; @fig-chla-agm; @fig-chla-agm-3). The AGM will likely change for all stations as more data are added throughout the year.
 
-Ammonium (NH4) concentrations for 2024 were below monthly means most of year at all four stations (@fig-nh4-boxplots). Concentrations were above average at the two southern sites, Fort Matanzas and Pellicer Creek in September (@fig-nh4-boxplots-3; @fig-nh4-boxplots-4) but were below average at Pine Island and San Sebastian (@fig-nh4-boxplots-1; @fig-nh4-boxplots-2).
+Ammonium (NH4) concentrations for 2024 were below monthly means most of year at all four stations (@fig-nh4-boxplots). Concentrations were above average at the two southern stations, Fort Matanzas and Pellicer Creek in September (@fig-nh4-boxplots-3; @fig-nh4-boxplots-4) but were below average at Pine Island and San Sebastian (@fig-nh4-boxplots-1; @fig-nh4-boxplots-2).
 
 Total Kjeldahl Nitrogen (TKN) concentrations were higher than average at all stations in January and March, but concentrations were lower most of Q2 and Q3 (@fig-tkn-boxplots). Concentrations in September were above average for Fort Matanzas and Pellicer Creek (@fig-tkn-boxplots-3; @fig-tkn-boxplots-4)
 
-Total phosphorus concentrations were below the state threshold at all stations in 2024 with the exception of February at Pine Island which was missing data (@fig-tp-boxplots). Fort Matanzas experienced higher than average TP values for January -- March and July (@fig-tp-boxplots-3) and San Sebastian had lower than average TP values for February -- September. 
+Total phosphorus (TP) concentrations were below the state threshold at all stations in 2024 with the exception of February at Pine Island which was missing data (@fig-tp-boxplots). Fort Matanzas experienced higher than average TP values for January -- March and July (@fig-tp-boxplots-3) and San Sebastian had lower than average TP values for February -- September. 
 
-Relatively high levels of orthophosphate were observed at Pine Island and San Sebastian in January (@fig-tp-boxplots-1, @fig-tp-boxplots-2) and below average levels were found in April -- June for San Sebastian, Fort Matanzas, and Pellicer Creek (@fig-tp-boxplots-2, (@fig-tp-boxplots-3).
+Relatively high levels of orthophosphate (PO4) were observed at Pine Island and San Sebastian in January (@fig-tp-boxplots-1; @fig-tp-boxplots-2) and below average levels were found in April -- June for San Sebastian, Fort Matanzas, and Pellicer Creek (@fig-tp-boxplots-2; (@fig-tp-boxplots-3).
 
 ## Data
 
@@ -143,7 +143,7 @@ threshold_criteria_plot(pc, param = 'do_mgl', rng = c(2024, 2024),
 ```{r}
 #| label: fig-chla-boxplots
 #| echo: false
-#| fig.cap: Historical monthly chlorophyll a at each SWMP water quality station with current year monthly value overlaid in red. Horizontal dashed blue line indicates the state threshold, as found in F.A.C 62-302.530.
+#| fig.cap: Historical monthly chlorophyll *a* at each SWMP water quality station with current year monthly value overlaid in red. Horizontal dashed blue line indicates the state threshold, as found in F.A.C 62-302.530.
 #| fig.subcap:
 #|    - "Pine Island"
 #|    - "San Sebastian"
@@ -265,7 +265,7 @@ agm(station = "gtmpcnut",
 
 #### Total Nitrogen
 
-TN is calculated by adding TKN and NO23. It accounts for the inorganic nitrogen fraction as well as larger pools of organic bioavailable forms.
+Total Nitrogen (TN) is calculated by adding TKN and NO23. It accounts for the inorganic nitrogen fraction as well as larger pools of organic bioavailable forms.
 
 Several of the NO23 values fell below the Florida Department of Environmental Protection Central Lab's minimum detection limit and therefore TN was not able to be calculated and is missing for quite a few months at all the stations (@fig-tn-boxplots). This was especially true at Fort Matanzas which has the least amount of TN data (@fig-tn-boxplots-3).
 
@@ -331,7 +331,7 @@ boxplot_currentyear(station = "gtmpinut",
 
 #### Ammonium
 
-Ammonium is directly measured in our samples and is a key inorganic nutrient assimilated by phytoplankton in primary production. 
+Ammonium (NH4) is directly measured in our samples and is a key inorganic nutrient assimilated by phytoplankton in primary production. 
 
 ```{r}
 #| label: fig-nh4-boxplots
