--- a/text/collection.qmd
+++ b/text/collection.qmd
@@ -14,7 +14,7 @@ The meteorological data were collected using a Campbell Scientific CR1000 logger
 ![Weather Station at Pellicer Creek during a monthy data download and station cleaning and maintenance in September, 2020.](/images/2020.09.30_METstation_SDunnigan.jpg){#fig-met-station}
 :::
 
-A maximum four-week sampling interval (i.e., time between data downloads) was used to avoid losing data and to provide for regular inspection and maintenance of the station. At each visit to the station, sensor performance was checked by comparing weather station values to those of a handheld Kestrel 4000 wind/weather instrument. All sensors were inspected for damage or debris and repaired and cleaned accordingly after the download of data were downloaded to a Palm Pilot. Except for the rain gauge (which was calibrated in-house), all sensors were removed and sent to Campbell Scientific for re-calibration when appropriate. In addition to data obtained directly from the data logger, data were also transmitted via Campbell Scientific telemetry equipment to a NOAA GOES satellite hourly.
+A maximum four-week sampling interval (i.e., time between data downloads) was used to avoid losing data and to provide for regular inspection and maintenance of the station. At each visit to the station, sensor performance was checked by comparing weather station values to those of a handheld Kestrel 5000 wind/weather instrument. All sensors were inspected for damage or debris and repaired and cleaned accordingly after the download of data were downloaded to a Palm Pilot. Except for the rain gauge (which was calibrated in-house), all sensors were removed and sent to Campbell Scientific for re-calibration when appropriate. In addition to data obtained directly from the data logger, data were also transmitted via Campbell Scientific telemetry equipment to a NOAA GOES satellite hourly.
 
 ## Water quality -- continuous
 
@@ -36,4 +36,4 @@ Water samples were collected monthly at each of the four water quality monitorin
 Collection methods for nutrient analyses
 :::
 
-Water samples collected between January 1, 2003 and June 30, 2010 were collected and analyzed by University of Florida's (UF) Department of Fisheries and Aquatic Sciences. Samples collected between July 1, 2010 and November 30, 2012 were collected by GTMNERR and analyzed by the UF lab. Samples collected on or after December 1, 2012 were collected by GTMNERR and analyzed by the Florida Department of Environmental Protection's (FDEP) Central Laboratory. Both laboratories were certified through the National Environmental Laboratory Accreditation Program and used the American Public Health Association and Environmental Protection Agency methods for analyses. Method details can be found in annual metadata files which are downloadable from (https://cdmo.baruch.sc.edu).
+Water samples collected between January 1, 2003 and June 30, 2010 were collected and analyzed by University of Florida's (UF) Department of Fisheries and Aquatic Sciences. Samples collected between July 1, 2010 and November 30, 2012 were collected by GTMNERR and analyzed by the UF lab. Samples collected on or after December 1, 2012 were collected by GTMNERR and analyzed by the Florida Department of Environmental Protection's (FDEP) Central Laboratory. Both laboratories were certified through the National Environmental Laboratory Accreditation Program and used the American Public Health Association and Environmental Protection Agency methods for analyses. Method details can be found in annual metadata files which are downloadable from the [CDMO](https://cdmo.baruch.sc.edu).
